--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="./Fortune_cookie.js" defer></script>
-    <link rel="stylesheet" href="styles.css">
+    <script src="./resourses/Fortune_cookie.js" defer></script>
+    <link rel="stylesheet" href="./resourses/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=DynaPuff&display=swap" rel="stylesheet">
     <title>Fortune cookie emulator</title>
 </head>
